quick-find impl

--- a/algorithms/gradle.properties
+++ b/algorithms/gradle.properties
@@ -1,5 +1,5 @@
 # =============================================================================
-# Specific gradle setup for project 'quick-find'
+# Specific gradle setup for project 'algorithms'
 # =============================================================================
 replacePlaceholders=true
 
