--- a/algorithms/libraries.gradle
+++ b/algorithms/libraries.gradle
@@ -1,5 +1,5 @@
 /* ============================================================================
-   Library definitions for project 'quick-find'
+   Library definitions for project 'algorithms'
    ============================================================================
    Define here library dependencies and use them inside your build.gradle
    files in sub projects.
