--- a/algorithms/build-java.gradle
+++ b/algorithms/build-java.gradle
@@ -17,6 +17,9 @@ sourceCompatibility = '1.8'
 dependencies{
 	testCompile library.junit
 	testCompile library.mockito_all
+	
+	compile group: 'commons-lang', name: 'commons-lang', version: '2.2'
+	
 }
 
 /* Per default GRADLE stops the build if one single test fails. We want to have all tests executed. */
